# texed

./: README.md  pyproject.toml
src/: app.py  main.py
