[tool.poetry]
name = "texed"
version = "2.4"
description = "A simple and fast text editor made in python"
authors = ["jean0t <joaomouryf@hotmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.48"
pygments = "^2.19.1"


[tool.poetry.scripts]
texed = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
